# predator-ng

./: Cargo.toml  README.md
src/: main.rs
src/widgets/: color_box.rs  mod.rs  toggle.rs
